++security checks and main module

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,4 +10,13 @@ main_block {
     booting_timeout = ${?BOOTING_TIMEOUT}
   }
 
+  crypto {
+    bank_key = "<bank_key>"
+
+    admin_key = "<admin_key>"
+
+    fake_key = "<fake_key>"
+
+  }
+
 }
